[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/gui/info_panel_contents.gd" type="Script" id=1]
[ext_resource path="res://src/gui/health_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/gui/energy_consumption_label.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_h_separator.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.gd" type="Script" id=6]

[node name="InfoPanelContents" type="VBoxContainer"]
margin_left = 2560.0
margin_top = -12.0
margin_right = 3852.0
margin_bottom = 2031.0
custom_constants/separation = 16
script = ExtResource( 1 )

[node name="Status" type="HBoxContainer" parent="."]
margin_right = 1292.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="HealthLabel" parent="Status" instance=ExtResource( 2 )]
margin_right = 97.0
margin_bottom = 14.0

[node name="Spacer" type="Control" parent="Status"]
margin_left = 97.0
margin_right = 1107.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 5
script = ExtResource( 6 )

[node name="EnergyConsumptionLabel" parent="Status" instance=ExtResource( 4 )]
margin_left = 1107.0
margin_right = 1292.0
margin_bottom = 14.0

[node name="Description" type="VBoxContainer" parent="."]
margin_top = 30.0
margin_right = 1292.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 6

[node name="CommandsSeparator" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 1292.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="CommandsLabel" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 1292.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Commands"
is_header = true

[node name="Commands" type="VBoxContainer" parent="."]
margin_top = 96.0
margin_right = 1292.0
margin_bottom = 96.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="UpgradesSeparator" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 1292.0
margin_bottom = 116.0
size_flags_horizontal = 3

[node name="UpgradesLabel" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 1292.0
margin_bottom = 146.0
size_flags_horizontal = 3
text = "Upgrades"
is_header = true

[node name="Upgrades" type="VBoxContainer" parent="."]
margin_top = 162.0
margin_right = 1292.0
margin_bottom = 176.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="ScaffolderLabel" parent="Upgrades" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1292.0
margin_bottom = 14.0
text = "TODO"
font_size = "Xs"
